--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ include-package-data = true
       "sqlHelpers/insert_data_uncertainty.sql",
       "sqlHelpers/insert_taxa_row.sql",
       "sqlHelpers/upsert_collunit.sql",
-      ""sqlHelpers/insert_speleothem.sql"]
+      "sqlHelpers/insert_speleothem.sql"]
 
     [project.optional-dependencies]
     build = ["build", "twine"]
