changes to handle different kinds of uncertainties and wide and long formats of data

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ include-package-data = true
       "sqlHelpers/insert_data_uncertainty.sql",
       "sqlHelpers/insert_taxa_row.sql",
       "sqlHelpers/upsert_collunit.sql",
-      "sqlHelpers/insert_speleothem.sql"]
+      "sqlHelpers/insert_speleothem.sql",
+      "sqlHelpers/insert_speleothem_cu.sql"]
 
     [project.optional-dependencies]
     build = ["build", "twine"]
