--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,22 +7,40 @@ name = "DataBUS"
 version = "0.1.0"
 description = "Upload dataset records to the Neotoma Database"
 authors = [{name = "Socorro E Dominguez Vidana", email = "dominguezvid@uwisc.edu"}]
-
+license = "MIT"
+license-files = ["LICENSE.md"]
+requires-python = "==3.11.10"
+readme = {file = "README.md", content-type = "text/markdown"}
+keywords = ["neotoma", "paleoecology", "interoperability", "postgres", "SQL"]
+classifiers = [
+  "Development Status :: 4 - Beta",
+  "Operating System :: POSIX :: Linux",
+  "Operating System :: MacOS :: MacOS X",
+  "Topic :: Database",
+  "Topic :: Scientific/Engineering",
+  "Topic :: Scientific/Engineering :: Information Analysis",
+  "Topic :: Software Development :: Object Brokering"
+]
 dependencies = [
-    "numpy==1.25.0",
+    "numpy>1.25.0",
     "pandas==2.0.2",
-    "psycopg2-binary==2.9.6",
+    "psycopg2-binary>=2.9.10",
     "python-dateutil==2.8.2",
     "python-dotenv==1.0.0",
     "pytz==2023.3",
-    "PyYAML==6.0",
+    "PyYAML==5.3.1",
     "six==1.16.0",
     "tzdata==2023.3",
     "openpyxl",
-    "requests"
-    ]
+    "requests",
+    "mkdocs>=1.6.1",
+    "mkdocs-material>=9.6.16",
+    "mkdocstrings[python-legacy]>=0.18",
+]
 
-requires-python = ">=3.7"
+[project.urls]
+Issues = "https://github.com/NeotomaDB/DataBUS/issues"
+Repository = "https://github.com/NeotomaDB/DataBUS.git"
 
 [tool.setuptools]
 include-package-data = true
