--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -33,7 +33,8 @@ jobs:
           pip install mkdocs mkdocstrings mkdocstrings-python
 
       - name: Build documentation
-        run: mkdocs build --strict
+        run: mkdocs build
+        # --strict
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
