--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,51 @@ include-package-data = true
       "sqlHelpers/insert_entityvegetationcover.sql",
       "sqlHelpers/insert_externalspeleothem.sql",]
 
-    [project.optional-dependencies]
-    build = ["build", "twine"]
-    dev = ["black", "bumpver", "isort", "mypy", "pytest"]
+[project.optional-dependencies]
+build = ["build", "twine"]
+dev = ["ruff", "bumpver", "mypy", "pytest"]
+
+[tool.ruff]
+# Target Python 3.11
+target-version = "py311"
+line-length = 100
+src = ["src"]
+
+[tool.ruff.lint]
+# Enable common rule sets
+select = [
+    "E",      # pycodestyle errors
+    "W",      # pycodestyle warnings
+    "F",      # Pyflakes
+    "I",      # isort (import sorting)
+    "B",      # flake8-bugbear
+    "C4",     # flake8-comprehensions
+    "UP",     # pyupgrade
+    "ARG",    # flake8-unused-arguments
+    "SIM",    # flake8-simplify
+]
+ignore = [
+    "E501",   # line too long (handled by formatter)
+    "B008",   # do not perform function calls in argument defaults
+    "C901",   # too complex
+    "ARG001", # unused function argument (common in validators)
+    "ARG002", # unused method argument
+]
+
+[tool.ruff.lint.per-file-ignores]
+# Tests can use assertions and have unused imports for fixtures
+"**/tests/*" = ["S101", "ARG", "F401"]
+# __init__.py files often have unused imports for re-export
+"__init__.py" = ["F401"]
+
+[tool.ruff.format]
+# Use double quotes for strings
+quote-style = "double"
+# Indent with spaces
+indent-style = "space"
+
+[tool.pytest.ini_options]
+testpaths = ["src/DataBUS/tests", "src/DataBUS/neotomaHelpers/tests", "src/DataBUS/neotomaValidator/tests", "src/DataBUS/neotomaUploader/tests"]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
+addopts = "-v --tb=short"
